--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "main": "src/index.js",
-  "homepage": "https://zatar-401-advanced-javascript.github.io/resty/",
+  "homepage": "https://AbdulhakimZatar.github.io/resty/",
   "name": "resty",
   "version": "0.1.0",
   "private": true,
