--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "main": "src/index.js",
+  "main": "/",
   "homepage": "https://AbdulhakimZatar.github.io/resty/",
-  "name": "resty",
+  "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
