--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "main": "/",
   "homepage": "https://AbdulhakimZatar.github.io/resty/",
-  "name": "my-react-app",
+  "name": " resty",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
