--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "main": "src/index.js",
-  "homepage": "https://AbdulhakimZatar.github.io/resty/",
   "name": "resty",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-if": "^4.0.1",
     "react-json-view": "^1.19.1",
     "react-scripts": "4.0.0",
     "superagent": "^6.1.0",
@@ -22,9 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint '**/*.js'",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "lint": "eslint '**/*.js'"
   },
   "eslintConfig": {
     "extends": [
